Submitting reviewed version of notebook 17 and finishing review.

--- a/17-proximos-passos.ipynb
+++ b/17-proximos-passos.ipynb
@@ -7,7 +7,7 @@
     "Para onde ir a partir daqui?\n",
     "======================\n",
     "\n",
-    "Aprender uma linguagem de programação é o primeiro passo para tornar-se um \"computacionalista\" que faça avançar a ciência e a engenharia através de modelagem computacional e simulação.\n",
+    "Aprender uma linguagem de programação é o primeiro passo para tornar-se um \"computacionalista\" que queira fazer avançar a ciência e a engenharia através de modelagem computacional e simulação.\n",
     "\n",
     "Enumeramos algumas habilidades adicionais que podem ser muito benéficas para o trabalho diário do cientista computacional, mas é claro que elas não são exaustivas.\n",
     "\n",
