Submitting compiled version, ready to use. Requires fine tuning and improvements. Waiting for Hans comments.

--- a/08-ferramentas-funcionais.ipynb
+++ b/08-ferramentas-funcionais.ipynb
@@ -1070,7 +1070,7 @@
     "\n",
     "As ferramentas funcionais descritas neste capítulo também podem ser mais rápidas do que laços explícitos (`for` ou `while`) sobre os elementos da lista.\n",
     "\n",
-    "O programa `rapidez_compreensao_lista.py` abaixo calcula $ \\\\sum \\_{i=0}^{N-1} i^2 $ para um grande valor de *N* usando 4 métodos diferentes e registra o tempo de execução:\n",
+    "O programa `rapidez_compreensao_lista.py` abaixo calcula $\\sum_{i=0}^{N-1} i^2$ para um grande valor de *N* usando 4 métodos diferentes e registra o tempo de execução:\n",
     "\n",
     "- Método 1: laço `for` (com lista pré-alocada, armazenamento de *i*<sup>2</sup> na lista, em seguida, usando a função predefinida `sum`)\n",
     "\n",
