--- a/12-computacao-simbolica.ipynb
+++ b/12-computacao-simbolica.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sympy\n",
@@ -988,7 +990,7 @@
    "source": [
     "Às vezes, o SymPy pode retornar um resultado de uma forma pouco familiar. Se, por exemplo, você desejar usar o SymPy para verificar se você diferenciou algo corretamente, uma técnica que pode ser útil é subtrair o resultado do SymPy do seu resultado e verificar se a resposta é zero.\n",
     "\n",
-    "Tomando o exemplo simples de uma função de base radial multiquádrica, $ \\phi(r) = \\sqrt{r^2 + \\sigma^2} $ com $ r = \\sqrt{x^2 + y^2} $ e $ \\sigma $ uma constante, podemos verificar se a primeira derivada em $ x $ é $ \\frac{\\partial \\phi}{\\partial x} = \\frac{x}{\\sqrt{r^2 + \\sigma^ 2}} $.\n",
+    "Tomando o exemplo simples de uma função de base radial multiquádrica, $\\phi(r) = \\sqrt{r^2 + \\sigma^2}$ com $r = \\sqrt{x^2 + y^2}$ e $\\sigma$ uma constante, podemos verificar se a primeira derivada em $x$ é $\\frac{\\partial \\phi}{\\partial x} = \\frac{x}{\\sqrt{r^2 + \\sigma^ 2}}$.\n",
     "\n",
     "Neste exemplo, primeiro pedimos que o SymPy imprima a derivada. Veja que ela é impressa de forma diferente da nossa derivada de teste, mas a subtração verifica que elas são idênticas:"
    ]
@@ -2059,7 +2061,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
