--- a/13-computacao-numerica.ipynb
+++ b/13-computacao-numerica.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "#### Limitações de `int`s\n",
     "\n",
-    "A matemática fornece o conjunto infinito dos números naturais $ \\mathbb{ℕ} = \\{1, 2, 3,\\dots \\} $. Como o computador opera de modo *finito*, é impossível que ele represente todos esses números. Em vez disso, apenas um pequeno subconjunto de números é representado.\n",
+    "A matemática fornece o conjunto infinito dos números naturais $\\mathbb{ℕ} = \\{1, 2, 3,\\dots \\}$. Como o computador opera de modo *finito*, é impossível que ele represente todos esses números. Em vez disso, apenas um pequeno subconjunto de números é representado.\n",
     "\n",
     "O tipo `int` (geralmente [3]) representa números entre -2147483648 e +2147483647, e corresponde a 4 *bytes* (isto é 4\\*8 *bits* e 2<sup>32</sup> = 4294967296, que é o intervalo de -2147483648 a +2147483647).\n",
     "\n",
@@ -50,10 +50,10 @@
     "\n",
     "Os números em ponto flutuante em um computador não são os mesmos que os números em ponto flutuante da matemática. (Isto é exatamente o mesmo que dize que os números inteiros (matemáticos) não são os mesmos em um computador: apenas um *subconjunto* do conjunto infinito dos números inteiros pode ser representado pelo tipo `int`, como mostrado anteriormente). Então, como os números em ponto flutuante são representados no computador?\n",
     "\n",
-    "- Qualquer número real $ x $ pode ser escrito como\n",
-    "     $$ x  = a \\cdot 10^b, $$\n",
+    "- Qualquer número real $x$ pode ser escrito como\n",
+    "     $$x  = a \\cdot 10^b,$$\n",
     "\n",
-    "onde $ a $ é a mantissa e $ b $ o expoente.\n",
+    "onde $a$ é a mantissa e $b$ o expoente.\n",
     "      \n",
     "- Exemplos: \n",
     "\n",
@@ -70,19 +70,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Seguindo (aproximadamente) o padrão IEEE-754, usa-se 8 *bytes* para um `float` $ x $: estes 64 bits são divididos entre\n",
+    "- Seguindo (aproximadamente) o padrão IEEE-754, usa-se 8 *bytes* para um `float` $x$: estes 64 bits são divididos entre\n",
     "\n",
-    "     - 10 bits para o expoente $ b $ e\n",
+    "     - 10 bits para o expoente $b$ e\n",
     "\n",
-    "     - 54 bits para a mantissa $ a $.\n",
+    "     - 54 bits para a mantissa $a$.\n",
     "\n",
     "Isto resulta em\n",
     "\n",
     "- maior número em ponto flutuante possível ≈ 10 <sup>308</sup> (medida de qualidade para *b*)\n",
     "\n",
-    "- menor número em ponto flutuante possível (positivo) ≈ 10 <sup>-308</sup> (medida de qualidade para $ b $)\n",
+    "- menor número em ponto flutuante possível (positivo) ≈ 10 <sup>-308</sup> (medida de qualidade para $b$)\n",
     "\n",
-    "- distância entre 1.0 e o número imediatamente superior ≈ 10<sup>-16</sup> (medida de qualidade para $ a $)\n",
+    "- distância entre 1.0 e o número imediatamente superior ≈ 10<sup>-16</sup> (medida de qualidade para $a$)\n",
     "\n",
     "Observe que, *a priori*, é assim como os números em ponto flutuante são armazenados (na realidade, é um pouco mais complicado).\n"
    ]
@@ -91,9 +91,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Limitações dos números \"complexos\"\n",
+    "#### Limitações dos números complexos\n",
     "\n",
-    "O tipo `complex` tem essencialmente as mesmas limitações que o tipo `float` porque um número complexo consiste de dois números `float`: um representa a parte real, o outro a parte imaginária.\n",
+    "O tipo $ \\`complex` tem essencialmente as mesmas limitações que o tipo `float` porque um número complexo consiste de dois números `float`: um representa a parte real, o outro a parte imaginária.\n",
     "\n",
     "#### ... são esses tipos de números de valor prático?\n",
     "\n",
