--- a/15-visualizando-dados.ipynb
+++ b/15-visualizando-dados.ipynb
@@ -271,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# pylabsavefig.py\n",
@@ -897,7 +899,7 @@
     "Visualizando dados em dimensões superiores\n",
     "-----------------------------------\n",
     "\n",
-    "Muitas vezes, precisamos entender os dados definidos em posições no espaço 3D. Os dados em si são muitas vezes um campo escalar (como uma temperatura) ou um vetor 3D (como velocidade ou campo magnético), ou ocasionalmente um tensor. Por exemplo, para um campo vetorial 3D (definido como $ \\vec{f}(\\vec{x}) $, onde $ \\vec{x} \\in \\! \\mathbb{R}^3 $ e $ \\vec{f}(\\vec{x}) \\in \\! \\mathbb{R}^3 $), poderíamos desenhar uma seta 3D em cada ponto (grade) no espaço. É comum que esses conjuntos de dados dependam do tempo.\n",
+    "Muitas vezes, precisamos entender os dados definidos em posições no espaço 3D. Os dados em si são muitas vezes um campo escalar (como uma temperatura) ou um vetor 3D (como velocidade ou campo magnético), ou ocasionalmente um tensor. Por exemplo, para um campo vetorial 3D (definido como $\\vec{f}(\\vec{x})$, onde $\\vec{x} \\in \\! \\mathbb{R}^3$ e $\\vec{f}(\\vec{x}) \\in \\! \\mathbb{R}^3$), poderíamos desenhar uma seta 3D em cada ponto (grade) no espaço. É comum que esses conjuntos de dados dependam do tempo.\n",
     "\n",
     "A biblioteca provavelmente mais comumente utilizada nas ciências e engenharia para visualizar tais conjuntos de dados é provavelmente o VTK, *Visualization ToolKit* (<http://vtk.org>). Esta é uma importante biblioteca C++ com interfaces para linguagens de alto nível, incluindo o Python.\n",
     "\n",
