Correcting lots of minor errors and rewriting README.

--- a/01-introducao.ipynb
+++ b/01-introducao.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Por que Python para Computação Científica?\n",
+    "## Por que Python para Computação Científica?\n",
     "\n",
     "\n",
     "O foco do projeto da linguagem Python está na produtividade e legibilidade de código. Por exemplo, através de:\n",
@@ -145,12 +145,11 @@
     "Verifica-se que - mesmo se um código específico tiver que ser escrito em, digamos, C++ - é (frequentemente) mais eficiente prototipar o código em Python, e uma vez que um projeto apropriado (estrutura de classes) for encontrado, transferir o código para C++.\n",
     "\n",
     "\n",
-    "# Literatura\n",
-    "----------\n",
+    "## Literatura\n",
     "\n",
     "Enquanto este texto inicia-se com uma introdução de alguns aspectos básicos da linguagem de programação Python, você pode achar necessário - dependenddo de sua experiência prévia - buscar fontes secundárias para entender algumas ideias completamante. Nesse caso, os seguintes documentos são indicados:\n",
     "\n",
-    "-   Allen Downey, *Think Python*. Disponível online em html e pdf em <http://www.greenteapress.com/thinkpython/thinkpython.html>, ou na Amazon. <sup>[1](#footnote1)</sup>\n",
+    "-   Allen Downey, *Pense em Python*. Disponível online em html e pdf em https://penseallen.github.io/PensePython2e/.\n",
     "\n",
     "-   A documentação oficial Python: <http://www.python.org/doc/> e\n",
     "\n",
@@ -164,9 +163,7 @@
     "\n",
     "-   Homepage do <span>`matplotlib`</span> (<http://matplotlib.sourceforge.net/>).\n",
     "\n",
-    "-   Guia de estilos Python (<http://www.python.org/dev/peps/pep-0008/>\n",
-    "\n",
-    "<a name=\"footnote1\">1</a>: N.T. Este livro já possui uma versão em Português. Veja: http://novatec.com.br/livros/pense-em-python/"
+    "-   Guia de estilos Python (<http://www.python.org/dev/peps/pep-0008/>"
    ]
   },
   {
@@ -186,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Versões do Python\n",
+    "## Versões do Python\n",
     "\n",
     "Existem duas versões de Python por aí: Python 2.x and Python 3.x. Elas são levemente diferentes — as mudanças na Python 3.x foram introduzidas para corrigir algumas deficiências no projeto da linguagem identificados desde o seu início. Uma decisão que foi tomada assumiu que alguma incompatibilidade deveria ser aceita para se atingir o objetivo maior de uma linguagem melhor para o futuro.\n",
     "\n",
@@ -231,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estes documentos\n",
+    "## Estes documentos\n",
     "\n",
     "Este material foi convertido do `LaTex` para um conjunto de `Jupyter Notebooks`, tornando os exemplos nele contidos interativos. Você pode executar qualquer bloco de código iniciado por `In [ ]:` clicando na respectiva célula e pressionando `shift-enter`, ou clicando no botão <i class=\"fa fa-step-forward\"></i> da barra de ferramentas."
    ]
@@ -242,8 +239,7 @@
     "collapsed": true
    },
    "source": [
-    "Seu *feedback*\n",
-    "-------------\n",
+    "## Seu *feedback*\n",
     "\n",
     "Seu *feedback* é desejado. Caso você encontre algum erro neste texto, ou tiver sugestões sobre como alterá-lo ou estendê-lo, fique à vontade para entrar em contato com o Hans pelo e-mail `fangohr@soton.ac.uk`.\n",
     "\n",
