--- a/03-tipos-estruturas-dados.ipynb
+++ b/03-tipos-estruturas-dados.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "### Inteiros\n",
     "\n",
-    "Já vimos o uso dos números inteiros no [Capítulo 2](02-calculadora-poderosa.ipynb). Se precisarmos converter uma string contendo um número inteiro para um inteiro, podemos usar a função `int()`:"
+    "Se precisarmos converter uma *string* contendo um número inteiro para um inteiro, podemos usar a função `int()`:"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "source": [
     "Em muitas outras linguagens de programação, tais como C e FORTRAN, inteiros ocupam um tamanho fixo de 4 bytes, permitindo $2^{32}$ valores diferentes, mas tipos diferentes estão disponíveis com diferentes tamanhos. Para números que cabem dentro desses limites, os cálculos podem ser mais rápidos, mas você pode ter de verificar que os números não excedam os limites. Calcular um número além dos limites é o mesmo que incorrer em *overflow de inteiro*, e pode produzir resultados estranhos.\n",
     "\n",
-    "Mesmo em Python, precisamos estar cientes disto quando usamos o NumPy (veja o [Capítulo 14](14-python-numerico-numpy.ipynb)). O NumPy usa inteiros com um tamanho fixo porque ele armazena muitos deles juntos e precisa calculá-los eficientemente. A documentação sobre [tipos de dados do NumPy](http://docs.scipy.org/doc/numpy/user/basics.types.html) inclui uma gama de tipos inteiros denominados pelo tamanho deles. Então, `int16`, por exemplo, é um inteiro de 16 bits, com $2^{16}$ valores possíveis. \n",
+    "Mesmo em Python, precisamos estar cientes disto quando usamos o NumPy. O NumPy usa inteiros com um tamanho fixo porque ele armazena muitos deles juntos e precisa calculá-los eficientemente. A documentação sobre [tipos de dados do NumPy](http://docs.scipy.org/doc/numpy/user/basics.types.html) inclui uma gama de tipos inteiros denominados pelo tamanho deles. Então, `int16`, por exemplo, é um inteiro de 16 bits, com $2^{16}$ valores possíveis. \n",
     "\n",
     "Inteiros podem também ser do tipo *signed*, quando permitem valores positivos ou negativos, ou do tipo *unsigned*, quando permitem apenas valores positivos. Por exemplo:\n",
     "\n",
@@ -3604,14 +3604,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
