--- a/06-fluxo-controle.ipynb
+++ b/06-fluxo-controle.ipynb
@@ -496,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If-then-else (se... então... senão...)\n",
+    "Se-então-senão\n",
     "------------\n",
     "\n",
     "##### Informação adicional\n",
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Laço `for` (`for` loop)\n",
+    "Laço `for`\n",
     "--------\n",
     "\n",
     "##### Informação adicional\n",
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Juntamento com o comando `range()` (No [Capítulo 3](03-tipos-estruturas-dados.ipynb), pode-se iterar sobre inteiros crescentes:"
+    "Juntamente com o comando `range()`, pode-se iterar sobre inteiros crescentes:"
    ]
   },
   {
@@ -650,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Laço `while` (`while` loop)\n",
+    "Laço `while`\n",
     "----------\n",
     "\n",
     "A palavra-chave <span>`while`</span> permite-nos repetir uma operação enquanto uma condição é verdadeira. Suponha que quiséssemos saber por quantos anos teremos que guardar 100 reais em uma poupança para alcançar 200 reais simplesmente \n",
@@ -1151,14 +1151,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
