--- a/08-ferramentas-funcionais.ipynb
+++ b/08-ferramentas-funcionais.ipynb
@@ -1078,7 +1078,7 @@
     "\n",
     "- Método 3: usando compreensão de lista\n",
     "\n",
-    "- Método 4: usando `numpy`. (`numpy` é coberto no [Capítulo 14](14-python-numerico-numpy.ipynb))\n",
+    "- Método 4: usando `numpy`.\n",
     "\n",
     "O programa produz a seguinte saída:"
    ]
