--- a/12-computacao-simbolica.ipynb
+++ b/12-computacao-simbolica.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "A página inicial do SymPy (<http://sympy.org/>) fornece a documentação completa (e atualizada) para esta biblioteca.\n",
     "\n",
-    "A computação simbólica é muito lento em comparação com as operações em ponto flutuante (veja, por exemplo, o [Capítulo 13](13-computacao-numerica.ipynb)) e, assim, geralmente não muito adequada para simulação direta. No entanto, é uma ferramenta poderosa no suporte à preparação do código e trabalho simbólico. Ocasionalmente, usamos operações simbólicas em simulações para elaborar o código numérico mais eficiente, antes que seja executado.\n",
+    "A computação simbólica é muito lento em comparação com as operações em ponto flutuante e, assim, geralmente não muito adequada para simulação direta. No entanto, é uma ferramenta poderosa no suporte à preparação do código e trabalho simbólico. Ocasionalmente, usamos operações simbólicas em simulações para elaborar o código numérico mais eficiente, antes que seja executado.\n",
     "\n",
     "### Saída\n",
     "\n",
@@ -2055,7 +2055,7 @@
     "\n",
     "O SymPy fornece duas funções de plotagem, `plot()`, do módulo `sympy.plotting`, e `plot` do módulo `sympy.mpmath.visualization`. No momento da escrita, essas funções careciam de algumas capacidades de plotagem, o que significa que não são adequadas para a maioria de nossas necessidades. Ainda assim, caso você deseje utilizá-las, a função `help()` delas é útil. \n",
     "\n",
-    "Para a maioria dos nossos propósitos, Matplotlib deve ser a ferramenta de plotagem a ser escolhida. Os detalhes estão no [Capítulo 15](15-visualizando-dados.ipynb). Aqui, fornecemos apenas um exemplo de como plotar os resultados de uma computação SymPy."
+    "Para a maioria dos nossos propósitos, Matplotlib deve ser a ferramenta de plotagem a ser escolhida. Aqui, fornecemos apenas um exemplo de como plotar os resultados de uma computação SymPy."
    ]
   },
   {
