--- a/13-computacao-numerica.ipynb
+++ b/13-computacao-numerica.ipynb
@@ -10,7 +10,7 @@
     "Números e números\n",
     "-------------------\n",
     "\n",
-    "Já vimos que o Python reconhece diferentes *tipos* de números (veja [Capítulo 3](03-tipos-estruturas-dados.ipynb)):\n",
+    "Já vimos que o Python reconhece diferentes *tipos* de números:\n",
     "\n",
     "- números em ponto flutuante (`float`), como 3.14\n",
     "\n",
