--- a/15-visualizando-dados.ipynb
+++ b/15-visualizando-dados.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "<!-- Visual Python - que é uma ferramenta muito útil para gerar rapidamente animações de processos dependentes do tempo ocorrendo no espaço 3D -->\n",
     "\n",
-    "Matplotlib (Pylab): plotando $ y = f(x) $ (e um pouco mais)\n",
+    "Matplotlib (Pylab): plotando $y = f(x)$ (e um pouco mais)\n",
     "-------------------------------------------------------\n",
     "\n",
     "*Matplotlib* é uma biblioteca Python para plotagem 2D que produz figuras com qualidade de publicação em uma variedade de formatos impressos e interativos. O Matplotlib tenta fazer as coisas fáceis ainda mais fáceis, e as difíceis, possíveis. Você pode gerar gráficos, histogramas, espectros de energia, gráficos de barras, de erros, de dispersão, etc, com apenas algumas linhas de código.\n",
@@ -110,7 +110,7 @@
    "source": [
     "Como sempre, um equilíbrio deve ser encontrado entre preferências pessoais e consistência com a prática comum ao escolher esses nomes. A consistência com o uso comum é, certamente, mais importante se o código estiver propenso a ser usado por outros ou publicado.\n",
     "\n",
-    "Uma plotagem quase sempre precisa de *arrays* de dados numéricos e é por esta razão que o módulo NumPy é bastante usado: ele fornece manipulação rápida e eficiente de memória em Python (ver [Capítulo 14](14-python-numerico-numpy.ipynb). \n",
+    "Uma plotagem quase sempre precisa de *arrays* de dados numéricos e é por esta razão que o módulo NumPy é bastante usado: ele fornece manipulação rápida e eficiente de memória em Python. \n",
     "\n",
     "Poderíamos, portanto, ter escrito o exemplo 1a acima como o exemplo 1b (que é idêntico em funcionalidade ao anterior na criação da mesma plotagem):"
    ]
@@ -250,7 +250,7 @@
    "source": [
     "### Modo `inline` do  IPython\n",
     "\n",
-    "Dentro do Jupyter Notebook ou Qtconsole (veja o [Capítulo 11](11-shells-python.ipynb)), podemos usar o comando mágico `%matplotlib inline` para fazer novas plotagens aparecerem dentro do próprio console ou notebook. Em vez disso, para forçar janelas *pop-up*,  use `%matplotlib qt`.\n",
+    "Dentro do Jupyter Notebook ou Qtconsole, podemos usar o comando mágico `%matplotlib inline` para fazer novas plotagens aparecerem dentro do próprio console ou notebook. Em vez disso, para forçar janelas *pop-up*,  use `%matplotlib qt`.\n",
     "\n",
     "Há também o nome mágico `%pylab`, o qual não só irá mudar para a plotagem `inline`, mas também executará automaticamente `from pylab import *`."
    ]
