--- a/16-metodos-numericos-scipy.ipynb
+++ b/16-metodos-numericos-scipy.ipynb
@@ -20,9 +20,9 @@
     "\n",
     "Nós enumeramos três desses módulos, em particular:\n",
     "\n",
-    "- o módulo NumPy fornece um tipo de dado especializado para operar numericamente com vetores e matrizes (este é o tipo `array` fornecido pelo NumPy, conforme introduzido no [Capítulo 14](14-computacao-numerica-numpy.ipynb), além de ferramentas de álgebra linear.\n",
+    "- o módulo NumPy fornece um tipo de dado especializado para operar numericamente com vetores e matrizes (este é o tipo `array` fornecido pelo NumPy) além de ferramentas de álgebra linear.\n",
     "\n",
-    "- o módulo Matplotlib (também conhecido como Pylab) fornece recursos de plotagem e visualização (veja [Capítulo 15 ](15-visualizacao-dados.ipynb) e \n",
+    "- o módulo Matplotlib (também conhecido como Pylab) fornece recursos de plotagem e visualização e \n",
     "\n",
     "- o módulo `SciPy` (*SCIentific PYthon*), que fornece uma infinidade de algoritmos numéricos (introduzido neste capítulo).\n",
     "\n",
@@ -755,7 +755,7 @@
     "Ajuste de curva\n",
     "-------------\n",
     "\n",
-    "Já vimos no [Capítulo 14](14-python-numerico-numpy.ipynb) que podemos ajustar funções polinomiais a um conjunto de dados usando a função `numpy.polyfit`. Aqui, apresentamos um algoritmo de ajuste de curva mais genérico.\n",
+    "Já vimos que podemos ajustar funções polinomiais a um conjunto de dados usando a função `numpy.polyfit`. Aqui, apresentamos um algoritmo de ajuste de curva mais genérico.\n",
     "\n",
     "O SciPy fornece uma função um pouco genérica (baseada no algoritmo de Levenberg-Marquardt) através do `scipy.optimize.curve_fit` para ajustar uma determinada função (Python) a um conjunto de dados. O pressuposto é que temos um conjunto de dados com pontos $x_1, x_2, ... x_N$ e com valores de função correspondentes $y_i$ dependentes de $x_i$, tal que $y_i = f(x_i,\\textbf{p})$. Queremos determinar o vetor de parâmetros $\\textbf{p} = (p_1, p_2, \\dots, p_k)$ para que $r$, a soma dos resíduos, seja a menor possível:\n",
     "\n",
