--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -43,8 +43,7 @@ NumPy, SciPy, Sympy e Matplotlib, pode tornar-se um pouco mais
 trabalhosa. Por esta razão, optamos pela distribuição Anaconda, a qual,
 além de fornecer o interpretador Python e todos esses pacotes, também
 permite a execução simples e direta da interface Jupyter. A distribuição
-Anaconda (\url{https://www.continuum.io/what-is-anaconda}) é multiplataforma, 
-ou seja, está disponível para os sistemas Windows, Linux e macOS, e de uso gratuito.
+Anaconda Individual Edition (\url{https://www.anaconda.com/products/individual}) é multiplataforma e está disponível para uso livre nos principais sistemas operacionais, tais como Windows, Linux e macOS.
 
 \section*{Por que Jupyter?}
 
@@ -62,26 +61,22 @@ corrigir algumas deficiências no projeto da linguagem identificados
 desde o seu início. Uma decisão que foi tomada assumiu que alguma
 incompatibilidade deveria ser aceita para se atingir o objetivo maior de
 uma linguagem melhor para o futuro. Em virtude de a tendência ser sempre
-de melhorias, usaremos a versão Python 3.x
+de melhorias, a versão Python 3.x é sugerida.
 
 \section*{Como instalar a distribuição Anaconda?}
 
 \begin{enumerate}
 \item
-  Acesse o link \url{https://www.continuum.io/downloads} e faça o
-  download do software para seu sistema operacional. Role a página para
-  baixo até a respectiva aba de seu sistema operacional. Opte pela
-  versão Python 3.6 (atual). Uma tela aparecerá onde você poderá
-  preencher o seu e-mail e fazer o download de uma folha de dicas (cheat
-  sheet), se desejar. Caso contrário, clique em \texttt{NO,\ THANKS}
-  para que o processo de download
-  comece.\footnote{O tamanho do arquivo de instalação pode variar de sistema para sistema.}
+  Acesse o link \url{https://www.anaconda.com/products/individual} e clique em
+  ``Download''. Opte pela versão Python 3.7 (atual) de acordo com sua arquitetura\footnote{O tamanho do arquivo de instalação pode variar de sistema para sistema.}.
 \item
   Execute o arquivo de instalação que você acabou de baixar para seu
   computador e siga os passos de instalação normalmente.
 \end{enumerate}
 
 \section*{Como lançar o Jupyter Notebook?}
+
+\textbf{Nota:} siga os mesmos passos para lançar o \emph{Jupyter Lab}.
 
 \begin{enumerate}
 \item
